# price-gh-bot

./: .coveragerc  .coveragerc.integration  .coveragerc.unit  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.test  FEEDBACK_SETUP.md  Makefile  Makefile.test  README.md  README_OLD.md  SECURITY_URGENT.md  docker-compose.test.yml  messages.py  mkdocs.yml  price_bot.py  pyproject.toml  pytest.ini  railway.json  railway.toml  requirements-dev.txt  requirements.txt  shipping_estimator.py
.github/workflows/: test-and-deploy.yml
app/: __init__.py  config.py  main.py  models.py
app/bot/: __init__.py  analytics_tracker.py  feedback.py  handlers.py  handlers_old.py  messages.py  response_formatter.py  scraping_orchestrator.py  types.py  url_processor.py  utils.py
app/config/: fees.yml  shipping_table.yml
app/core/: container.py
app/scrapers/: __init__.py  base.py  ebay.py  ebay_scraper.py  grailed.py  grailed_scraper.py  grailed_url_resolver.py  headless.py  headless_optimized.py
app/services/: __init__.py  analytics.py  browser_pool.py  cache_service.py  currency.py  currency_optimized.py  customs.py  github.py  reliability.py  seller_assessment.py  shipping.py
data/: analytics.db
docs/: ANALYTICS.md  CONTRIBUTING.md  PROJECT_ANALYSIS.md  TESTING.md  index.md  roadmap.md
docs/api/: bot.md  config.md  main.md  models.md  scrapers.md  services.md
docs/architecture/: business_logic.md  components.md  data_flow.md  overview.md
docs/development/: coding_guidelines.md  dependency_management.md  workflow.md
docs/operations/: monitoring.md  troubleshooting.md
docs/security/: auditing.md  practices.md
docs/setup/: configuration.md  environment.md
docs/testing/: how_to.md  strategy.md
tests/: __init__.py  test_currency.py  test_reliability.py  test_scrapers.py  test_shipping.py  test_shipping_new.py
tests_new/: README.md  __init__.py  conftest.py
tests_new/e2e/: __init__.py  test_real_urls.py
tests_new/fixtures/: test_data.json
tests_new/integration/: __init__.py  test_bot_handlers.py
tests_new/unit/: __init__.py  test_commission_contracts.py  test_config_bot.py  test_currency_contracts.py  test_grailed_availability_simple.py  test_grailed_buyability.py  test_grailed_url_resolver.py  test_platform_detection.py  test_regressions.py  test_response_formatter.py  test_scraping_orchestrator_cache.py  test_seller_assessment.py  test_shipping_contracts.py  test_url_processor.py
tests_new/utils/: data_updater.py
typings/dependency_injector/: __init__.pyi  containers.pyi  providers.pyi
